--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,10 @@ ga('send', 'pageview');
                 <a class="nav-link" href="{{ site.baseurl }}/categories">Categories</a>
                 </li>
 
+                <li class="nav-item">
+                  <a class="nav-link" href="https://github.com/adiatma" target="_blank">Github</a>
+                </li>
+
                 {% include search-lunr.html %}
 
             </ul>
