chore(layouts): add Youtube

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,6 +83,10 @@ ga('send', 'pageview');
                   <a class="nav-link" href="https://github.com/adiatma" target="_blank">Github</a>
                 </li>
 
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.youtube.com/channel/UCZOeO1elqR4mGVeman6b3SA" target="_blank">Youtube</a>
+                </li>
+
                 {% include search-lunr.html %}
 
             </ul>
